fixed layout issue in SignUpPage that caused unwanted scrolls. Improved responsivity of sign-up inputs

--- a/src/pages/SignUpPage.css
+++ b/src/pages/SignUpPage.css
@@ -43,7 +43,12 @@
 
 @media screen and (max-width: 600px) {
     .SignUpPage__form {
-        margin: 0 2rem;
+        margin: 2rem auto;
+        padding: 0;
+    }
+
+    .SignUpPage__form input {
+        max-width: 80vw;
     }
 }
 
